--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,6 @@
 	path = bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
     ignore = dirty
+[submodule "bundle/doxygentoolkit"]
+	path = bundle/doxygentoolkit
+	url = https://github.com/vim-scripts/DoxygenToolkit.vim.git
