--- a/.gitmodules
+++ b/.gitmodules
@@ -72,4 +72,7 @@
     ignore = dirty
 [submodule "bundle/plantuml"]
 	path = bundle/plantuml
-	url = https://github.com/aklt/plantuml-syntax.git
+    url = https://github.com/aklt/plantuml-syntax.git
+[submodule "bundle/typescript"]
+    path = bundle/typescript
+    url = https://github.com/leafgarland/typescript-vim.git 
