--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "bundle/typescript"]
 	path = bundle/typescript
 	url = https://github.com/leafgarland/typescript-vim.git
+[submodule "bundle/graphql"]
+	path = bundle/graphql
+	url = https://github.com/jparise/vim-graphql.git
